methods_of_translation/lab3/gen/Var4Parser.py
# Generated from C:/Users/Legend/PycharmProjects/Translation_lab3/check_antlr\Var4.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class Var4Parser ( Parser ):

    grammarFileName = "Var4.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'{'", "'}'", "','", "'if'", 
                     "':'", "'elif'", "'else'", "'while'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "SPS", "ALT", 
                      "WSP", "NAME", "INT", "EQ", "MOD", "MODONE", "OP", 
                      "COMP" ]

    RULE_start = 0
    RULE_lines = 1
    RULE_line = 2
    RULE_lastline = 3
    RULE_expr = 4
    RULE_block = 5
    RULE_assign = 6
    RULE_func = 7
    RULE_name = 8
    RULE_int = 9
    RULE_if = 10
    RULE_elif = 11
    RULE_else = 12
    RULE_while = 13
    RULE_op = 14
    RULE_newline = 15

    ruleNames =  [ "start", "lines", "line", "lastline", "expr", "block", 
                   "assign", "func", "name", "int", "if", "elif", "else", 
                   "while", "op", "newline" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    SPS=11
    ALT=12
    WSP=13
    NAME=14
    INT=15
    EQ=16
    MOD=17
    MODONE=18
    OP=19
    COMP=20

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lines(self):
            return self.getTypedRuleContext(Var4Parser.LinesContext,0)


        def EOF(self):
            return self.getToken(Var4Parser.EOF, 0)

        def getRuleIndex(self):
            return Var4Parser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = Var4Parser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.lines()
            self.state = 33
            self.match(Var4Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LinesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lastline(self):
            return self.getTypedRuleContext(Var4Parser.LastlineContext,0)


        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Var4Parser.LineContext)
            else:
                return self.getTypedRuleContext(Var4Parser.LineContext,i)


        def getRuleIndex(self):
            return Var4Parser.RULE_lines

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLines" ):
                listener.enterLines(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLines" ):
                listener.exitLines(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLines" ):
                return visitor.visitLines(self)
            else:
                return visitor.visitChildren(self)




    def lines(self):

        localctx = Var4Parser.LinesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_lines)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 35
                    self.line() 
                self.state = 40
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 41
            self.lastline()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def newline(self):
            return self.getTypedRuleContext(Var4Parser.NewlineContext,0)


        def expr(self):
            return self.getTypedRuleContext(Var4Parser.ExprContext,0)


        def if_(self):
            return self.getTypedRuleContext(Var4Parser.IfContext,0)


        def assign(self):
            return self.getTypedRuleContext(Var4Parser.AssignContext,0)


        def while_(self):
            return self.getTypedRuleContext(Var4Parser.WhileContext,0)


        def SPS(self, i:int=None):
            if i is None:
                return self.getTokens(Var4Parser.SPS)
            else:
                return self.getToken(Var4Parser.SPS, i)

        def getRuleIndex(self):
            return Var4Parser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLine" ):
                return visitor.visitLine(self)
            else:
                return visitor.visitChildren(self)




    def line(self):

        localctx = Var4Parser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_line)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==11:
                    self.state = 43
                    self.match(Var4Parser.SPS)
                    self.state = 48
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 2:
                self.state = 49
                self.expr(0)
                pass

            elif la_ == 3:
                self.state = 50
                self.if_()
                pass

            elif la_ == 4:
                self.state = 51
                self.assign()
                pass

            elif la_ == 5:
                self.state = 52
                self.while_()
                pass


            self.state = 55
            self.newline()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LastlineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(Var4Parser.ExprContext,0)


        def if_(self):
            return self.getTypedRuleContext(Var4Parser.IfContext,0)


        def assign(self):
            return self.getTypedRuleContext(Var4Parser.AssignContext,0)


        def while_(self):
            return self.getTypedRuleContext(Var4Parser.WhileContext,0)


        def newline(self):
            return self.getTypedRuleContext(Var4Parser.NewlineContext,0)


        def SPS(self, i:int=None):
            if i is None:
                return self.getTokens(Var4Parser.SPS)
            else:
                return self.getToken(Var4Parser.SPS, i)

        def getRuleIndex(self):
            return Var4Parser.RULE_lastline

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLastline" ):
                listener.enterLastline(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLastline" ):
                listener.exitLastline(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLastline" ):
                return visitor.visitLastline(self)
            else:
                return visitor.visitChildren(self)




    def lastline(self):

        localctx = Var4Parser.LastlineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_lastline)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==11:
                    self.state = 57
                    self.match(Var4Parser.SPS)
                    self.state = 62
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 2:
                self.state = 63
                self.expr(0)
                pass

            elif la_ == 3:
                self.state = 64
                self.if_()
                pass

            elif la_ == 4:
                self.state = 65
                self.assign()
                pass

            elif la_ == 5:
                self.state = 66
                self.while_()
                pass


            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12 or _la==13:
                self.state = 69
                self.newline()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func(self):
            return self.getTypedRuleContext(Var4Parser.FuncContext,0)


        def int_(self):
            return self.getTypedRuleContext(Var4Parser.IntContext,0)


        def name(self):
            return self.getTypedRuleContext(Var4Parser.NameContext,0)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Var4Parser.ExprContext)
            else:
                return self.getTypedRuleContext(Var4Parser.ExprContext,i)


        def op(self):
            return self.getTypedRuleContext(Var4Parser.OpContext,0)


        def getRuleIndex(self):
            return Var4Parser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = Var4Parser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 73
                self.func()
                pass

            elif la_ == 2:
                self.state = 74
                self.int_()
                pass

            elif la_ == 3:
                self.state = 75
                self.name()
                pass

            elif la_ == 4:
                self.state = 76
                self.match(Var4Parser.T__0)
                self.state = 77
                self.expr(0)
                self.state = 78
                self.match(Var4Parser.T__1)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 88
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = Var4Parser.ExprContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                    self.state = 82
                    if not self.precpred(self._ctx, 4):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                    self.state = 83
                    self.op()
                    self.state = 84
                    self.expr(5) 
                self.state = 90
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lines(self):
            return self.getTypedRuleContext(Var4Parser.LinesContext,0)


        def getRuleIndex(self):
            return Var4Parser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = Var4Parser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(Var4Parser.T__2)
            self.state = 92
            self.lines()
            self.state = 93
            self.match(Var4Parser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(Var4Parser.NameContext,0)


        def EQ(self):
            return self.getToken(Var4Parser.EQ, 0)

        def expr(self):
            return self.getTypedRuleContext(Var4Parser.ExprContext,0)


        def MOD(self):
            return self.getToken(Var4Parser.MOD, 0)

        def MODONE(self):
            return self.getToken(Var4Parser.MODONE, 0)

        def getRuleIndex(self):
            return Var4Parser.RULE_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)




    def assign(self):

        localctx = Var4Parser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_assign)
        try:
            self.state = 106
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.name()
                self.state = 96
                self.match(Var4Parser.EQ)
                self.state = 97
                self.expr(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.name()
                self.state = 100
                self.match(Var4Parser.MOD)
                self.state = 101
                self.expr(0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 103
                self.name()
                self.state = 104
                self.match(Var4Parser.MODONE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(Var4Parser.NameContext,0)


        def WSP(self, i:int=None):
            if i is None:
                return self.getTokens(Var4Parser.WSP)
            else:
                return self.getToken(Var4Parser.WSP, i)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Var4Parser.ExprContext)
            else:
                return self.getTypedRuleContext(Var4Parser.ExprContext,i)


        def getRuleIndex(self):
            return Var4Parser.RULE_func

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc" ):
                listener.enterFunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc" ):
                listener.exitFunc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc" ):
                return visitor.visitFunc(self)
            else:
                return visitor.visitChildren(self)




    def func(self):

        localctx = Var4Parser.FuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_func)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.name()
            self.state = 109
            self.match(Var4Parser.T__0)
            self.state = 113
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 110
                    self.match(Var4Parser.WSP) 
                self.state = 115
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3f) == 0 and ((1 << _la) & 49154) != 0:
                self.state = 116
                self.expr(0)
                self.state = 133
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 120
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while _la==13:
                            self.state = 117
                            self.match(Var4Parser.WSP)
                            self.state = 122
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)

                        self.state = 123
                        self.match(Var4Parser.T__4)
                        self.state = 127
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while _la==13:
                            self.state = 124
                            self.match(Var4Parser.WSP)
                            self.state = 129
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)

                        self.state = 130
                        self.expr(0) 
                    self.state = 135
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,12,self._ctx)



            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==13:
                self.state = 138
                self.match(Var4Parser.WSP)
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 144
            self.match(Var4Parser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(Var4Parser.NAME, 0)

        def getRuleIndex(self):
            return Var4Parser.RULE_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterName" ):
                listener.enterName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitName" ):
                listener.exitName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitName" ):
                return visitor.visitName(self)
            else:
                return visitor.visitChildren(self)




    def name(self):

        localctx = Var4Parser.NameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(Var4Parser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(Var4Parser.INT, 0)

        def getRuleIndex(self):
            return Var4Parser.RULE_int

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInt" ):
                listener.enterInt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInt" ):
                listener.exitInt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInt" ):
                return visitor.visitInt(self)
            else:
                return visitor.visitChildren(self)




    def int_(self):

        localctx = Var4Parser.IntContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_int)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(Var4Parser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(Var4Parser.ExprContext,0)


        def block(self):
            return self.getTypedRuleContext(Var4Parser.BlockContext,0)


        def elif_(self):
            return self.getTypedRuleContext(Var4Parser.ElifContext,0)


        def else_(self):
            return self.getTypedRuleContext(Var4Parser.ElseContext,0)


        def WSP(self, i:int=None):
            if i is None:
                return self.getTokens(Var4Parser.WSP)
            else:
                return self.getToken(Var4Parser.WSP, i)

        def getRuleIndex(self):
            return Var4Parser.RULE_if

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf" ):
                listener.enterIf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf" ):
                listener.exitIf(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf" ):
                return visitor.visitIf(self)
            else:
                return visitor.visitChildren(self)




    def if_(self):

        localctx = Var4Parser.IfContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_if)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(Var4Parser.T__5)
            self.state = 151
            self.expr(0)
            self.state = 152
            self.match(Var4Parser.T__6)
            self.state = 153
            self.block()
            self.state = 161
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.state = 157
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==13:
                    self.state = 154
                    self.match(Var4Parser.WSP)
                    self.state = 159
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 160
                self.elif_()


            self.state = 170
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
            if la_ == 1:
                self.state = 166
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==13:
                    self.state = 163
                    self.match(Var4Parser.WSP)
                    self.state = 168
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 169
                self.else_()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElifContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(Var4Parser.ExprContext,0)


        def block(self):
            return self.getTypedRuleContext(Var4Parser.BlockContext,0)


        def elif_(self):
            return self.getTypedRuleContext(Var4Parser.ElifContext,0)


        def WSP(self, i:int=None):
            if i is None:
                return self.getTokens(Var4Parser.WSP)
            else:
                return self.getToken(Var4Parser.WSP, i)

        def getRuleIndex(self):
            return Var4Parser.RULE_elif

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElif" ):
                listener.enterElif(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElif" ):
                listener.exitElif(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElif" ):
                return visitor.visitElif(self)
            else:
                return visitor.visitChildren(self)




    def elif_(self):

        localctx = Var4Parser.ElifContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_elif)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self.match(Var4Parser.T__7)
            self.state = 173
            self.expr(0)
            self.state = 174
            self.match(Var4Parser.T__6)
            self.state = 175
            self.block()
            self.state = 183
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,20,self._ctx)
            if la_ == 1:
                self.state = 179
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==13:
                    self.state = 176
                    self.match(Var4Parser.WSP)
                    self.state = 181
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 182
                self.elif_()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(Var4Parser.BlockContext,0)


        def getRuleIndex(self):
            return Var4Parser.RULE_else

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElse" ):
                listener.enterElse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElse" ):
                listener.exitElse(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElse" ):
                return visitor.visitElse(self)
            else:
                return visitor.visitChildren(self)




    def else_(self):

        localctx = Var4Parser.ElseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_else)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 185
            self.match(Var4Parser.T__8)
            self.state = 186
            self.match(Var4Parser.T__6)
            self.state = 187
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(Var4Parser.ExprContext,0)


        def block(self):
            return self.getTypedRuleContext(Var4Parser.BlockContext,0)


        def getRuleIndex(self):
            return Var4Parser.RULE_while

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile" ):
                listener.enterWhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile" ):
                listener.exitWhile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile" ):
                return visitor.visitWhile(self)
            else:
                return visitor.visitChildren(self)




    def while_(self):

        localctx = Var4Parser.WhileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_while)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 189
            self.match(Var4Parser.T__9)
            self.state = 190
            self.expr(0)
            self.state = 191
            self.match(Var4Parser.T__6)
            self.state = 192
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OP(self):
            return self.getToken(Var4Parser.OP, 0)

        def COMP(self):
            return self.getToken(Var4Parser.COMP, 0)

        def getRuleIndex(self):
            return Var4Parser.RULE_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOp" ):
                listener.enterOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOp" ):
                listener.exitOp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOp" ):
                return visitor.visitOp(self)
            else:
                return visitor.visitChildren(self)




    def op(self):

        localctx = Var4Parser.OpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_op)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 194
            _la = self._input.LA(1)
            if not(_la==19 or _la==20):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NewlineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ALT(self):
            return self.getToken(Var4Parser.ALT, 0)

        def WSP(self):
            return self.getToken(Var4Parser.WSP, 0)

        def getRuleIndex(self):
            return Var4Parser.RULE_newline
